MODON MRE BPDEV/force-app/main/default/objects/Process_Flow_Document__c/Process_Flow_Document__c.object-meta.xml
<CustomObject>
    <label>Process Flow Document</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Process Flow Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ProcessFlowDocuments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>