MODON MRE BPDEV/force-app/main/default/objects/Process_Flow_Document__c/fields/Checklist_Item_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Item_Metadata__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Checklist Item Metadata</label>
    <referenceTo>Checklist_Item_Metadata__c</referenceTo>
    <relationshipLabel>ProcessFlowDocuments</relationshipLabel>
    <relationshipName>ProcessFlowDocuments</relationshipName>
    <type>Lookup</type>
</CustomField>