MODON MRE BPDEV/force-app/main/default/objects/Process_Flow_Document__c/fields/Document_Auto_Upload__c.field-meta.xml
<CustomField>
    <fullName>Document_Auto_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Document Auto Upload</label>
    <type>Checkbox</type>
</CustomField>