MODON MRE BPDEV/force-app/main/default/objects/Process_Flow_Document__c/fields/Document_Description__c.field-meta.xml
<CustomField>
    <fullName>Document_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Document Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>