MODON MRE BPDEV/force-app/main/default/objects/Process_Flow_Document__c/fields/Document_Entry_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Document_Entry_Criteria__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Document Entry Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>