MODON MRE BPDEV/force-app/main/default/objects/Process_Flow_Document__c/fields/Document_Upload_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Document_Upload_Criteria__c</fullName>
    <label>Document Upload Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Optional</fullName>
            </value>
            <value>
                <fullName>On BP Submit</fullName>
            </value>
            <value>
                <fullName>On Linked Step Completion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>