MODON MRE BPDEV/force-app/main/default/objects/Process_Flow_Document__c/fields/DocuSign_Enabled__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DocuSign Enabled</label>
    <type>Checkbox</type>
</CustomField>