MODON MRE BPDEV/force-app/main/default/objects/Process_Flow_Document__c/fields/isAutoGen__c.field-meta.xml
<CustomField>
    <fullName>isAutoGen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isAutoGen</label>
    <type>Checkbox</type>
</CustomField>