MODON MRE BPDEV/force-app/main/default/objects/Process_Flow_Document__c/fields/Nintex_Package_Name__c.field-meta.xml
<CustomField>
    <fullName>Nintex_Package_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nintex Package Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>