MODON MRE BPDEV/force-app/main/default/objects/Process_Flow_Document__c/fields/Process_Flow__c.field-meta.xml
<CustomField>
    <fullName>Process_Flow__c</fullName>
    <label>Process Flow</label>
    <referenceTo>Process_Flow__c</referenceTo>
    <relationshipLabel>ProcessFlowDocuments</relationshipLabel>
    <relationshipName>ProcessFlowDocuments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>