MODON MRE BPDEV/force-app/main/default/objects/Process_Flow_Document__c/fields/Process_Flow_Step__c.field-meta.xml
<CustomField>
    <fullName>Process_Flow_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Process Flow Step</label>
    <referenceTo>Process_Flow_Step__c</referenceTo>
    <relationshipLabel>ProcessFlowDocuments</relationshipLabel>
    <relationshipName>ProcessFlowDocuments</relationshipName>
    <type>Lookup</type>
</CustomField>