MODON MRE BPDEV/force-app/main/default/objects/Process_Flow_Document__c/fields/Process_Flow_Step_Map__c.field-meta.xml
<CustomField>
    <fullName>Process_Flow_Step_Map__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Process Flow Step Map</label>
    <referenceTo>Process_Flow_Step__c</referenceTo>
    <relationshipLabel>ProcessFlowDocuments (Process Flow Step Map)</relationshipLabel>
    <relationshipName>viewDocuments</relationshipName>
    <type>Lookup</type>
</CustomField>