MODON MRE BPDEV/force-app/main/default/objects/Process_Flow_Document__c/fields/Record_Creation_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Record_Creation_Criteria__c</fullName>
    <label>Record Creation Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On BP Creation</fullName>
            </value>
            <value>
                <fullName>On Linked Step Creation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>